# docmind

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: config.py  db.py  main.py  models.py  storage.py
backend/app/api/: auth.py  chat.py  deps.py  documents.py  health.py
backend/app/core/: errors.py  rate_limit.py  security.py
backend/app/ingestion/: chunking.py  extract.py  ocr.py  worker.py
backend/app/providers/: anthropic_provider.py  base.py  hashing.py  local.py  openai_compat.py
backend/app/rag/: pipeline.py  prompts.py  retrieval.py
backend/app/schemas/: auth.py  chat.py  common.py  documents.py
backend/evals/: README.md  __init__.py  golden_set.json  run_eval.py
backend/scripts/: seed.py
backend/seed_data/: atlas-product-spec.md  aurora-employee-handbook.md  solaris-research-notes.txt
backend/tests/: conftest.py  test_auth_integration.py  test_chat_integration.py  test_chunking.py  test_documents_integration.py  test_extract.py  test_hash_provider.py  test_isolation_integration.py  test_local_llm.py  test_prompts.py  test_rrf.py  test_security.py  utils.py
docs/: api-contract.md  architecture.md  decisions.md
frontend/: .dockerignore  .gitignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
frontend/src/__tests__/: api-client.test.ts  chat-message.test.tsx  upload-dropzone.test.tsx  (+1 more)
(+27 files in other folders)
