[project]
name = "docmind-backend"
version = "1.0.0"
description = "DocMind API and ingestion worker"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pgvector>=0.3.6",
    "pydantic[email]>=2.10",
    "pydantic-settings>=2.7",
    "arq>=0.26",
    "redis>=5.2",
    "fastembed>=0.5",
    "pypdf>=5.1",
    "pwdlib[argon2]>=0.2",
    "pyjwt>=2.10",
    "python-multipart>=0.0.20",
    "openai>=1.60",
    "anthropic>=0.43",
    "rapidocr-onnxruntime>=1.4",
    "pillow>=11.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "testcontainers[postgres]>=4.9",
    "ruff>=0.9",
    "mypy>=1.14",
    "asgi-lifespan>=2.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["alembic/", "tests/", "evals/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: requires Docker (testcontainers)"]
